remove overflow:auto on .container - fixes #4

--- a/css/scraperstrap.css
+++ b/css/scraperstrap.css
@@ -532,7 +532,6 @@ input[type="color"],
 /* Responsive sizing for .containers */
 
 .container {
-    overflow: auto;
     margin-bottom: 20px;
     width: 320px;
     -moz-transition: width 0.5s;
